<resources>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="cloud">Cloud</string>
    <string name="wind">Wind</string>
    <string name="error">Error</string>
    <string name="sunset">Sunset</string>
    <string name="sunrise">Sunrise</string>
    <string name="weather">Weather</string>
    <string name="updated">Updated:</string>
    <string name="app_name">MDA_Project</string>
    <string name="title_activity_information">Map</string>
    <string name="sign_up">Sign up</string>
    <string name="fullname">Fullname</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_here">Already have an account? Login</string>
    <string name="login">Login</string>
    <string name="signup_here">Create a new account? Sign up</string>
    <string name="cart">Cart</string>
    <string name="your_cart_is_empty">Your cart is empty</string>
    <string name="total_money">Total money</string>
    <string name="valuable">Valuable</string>
    <string name="pay_to_cart">Pay to cart</string>
    <string name="keep_buying">Keep buying</string>
    <string name="contact_us">Contact us</string>
    <string name="my_team">My team:</string>
    <string name="nguyen_huy_hoang">Nguyen Huy Hoang</string>
    <string name="nguyen_viet_hoang">Nguyen Viet Hoang</string>
    <string name="nguyen_khanh_nam">Nguyen Khanh Nam</string>
    <string name="doan_xuan_son">Doan Xuan Son</string>
    <string name="company_e17cn01">Company: E17CN01</string>
    <string name="product_name">Product name</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="description_detail_product">Description detail product</string>
    <string name="information_of_customer">Information of customer</string>
    <string name="full_name">Full name</string>
    <string name="phone">Phone</string>
    <string name="email1">Email</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="about_us">About us</string>
    <string name="location_10km_nguyen_trai_street_ha_dong_district_ha_noi">Location: 10km Nguyen Trai Street, Ha Dong district, Ha Noi</string>
    <string name="newest_product">Newest Product</string>
    <string name="name_product">Name product</string>
    <string name="price1">Price</string>
    <string name="name_product1">Name Product</string>
    <string name="price_product">Price product</string>
    <string name="description">Description</string>
    <string name="type_of_product">Type of product</string>
    <string name="product_name1">Product Name</string>
    <string name="name_product2">Name Product</string>
    <string name="price_product1">Price product</string>
    <string name="description1">Description</string>
    <string name="name_product3">Name Product</string>
    <string name="price_product2">Price product</string>
    <string name="description2">Description</string>
    <string name="change_language">Change language</string>
    <string name="language">Language</string>
    <string name="price2">Price</string>
</resources>