<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10"
    tools:context=".activity.CartActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarCart"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="#5DB075"
        app:title="@string/cart"
        app:titleTextColor="#ffffff"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textviewNotification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/your_cart_is_empty"
                android:textSize="30sp" />

            <ListView
                android:id="@+id/listviewCart"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            </ListView>
        </FrameLayout>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_marginTop="5dp"
            android:orientation="horizontal"

            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/total_money"
                    android:textColor="#000000"
                    android:textSize="30sp" />
            </LinearLayout>
            <LinearLayout
                android:gravity="right|center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/textviewTotalMoney"
                    android:gravity="right"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/valuable"
                    android:textColor="#FF000F"
                    android:textSize="30sp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">
        <Button
            android:textSize="20sp"
            android:text="@string/pay_to_cart"
            android:layout_weight="1"
            android:id="@+id/buttonPayToCart"
            android:backgroundTint="#ff3945"
            android:layout_width="wrap_content"
            android:layout_height="70dp"/>
        <Button
            android:layout_marginLeft="10dp"
            android:textSize="20sp"
            android:text="@string/keep_buying"
            android:layout_weight="1"
            android:id="@+id/buttonKeepBuying"
            android:backgroundTint="#5DB075"
            android:layout_width="wrap_content"
            android:layout_height="70dp"/>
    </LinearLayout>

</LinearLayout>