<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#5DB075"
    android:orientation="vertical"
    tools:context=".activity.InforCustomerActiviry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="80dp"
        android:background="@drawable/border"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="5dp"
            android:text="@string/information_of_customer"
            android:textColor="#000000"
            android:textSize="30sp"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp">

            <EditText
                android:backgroundTint="#ffffff"
                android:layout_margin="5dp"
                android:id="@+id/editTextNameCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:backgroundTint="#ffffff"
                android:layout_margin="5dp"
                android:id="@+id/editTextNamePhoneCustomer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:backgroundTint="#ffffff"
                android:layout_margin="5dp"
                android:id="@+id/editTextNameEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:backgroundTint="#5DB075"
                android:layout_marginRight="70dp"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonConfirm"
                android:text="@string/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <Button
                android:backgroundTint="#5DB075"
                android:textSize="15sp"
                android:padding="10dp"
                android:id="@+id/buttonCancel"
                android:text="@string/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>