<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.Login">


    <TextView
        android:textStyle="bold"
        android:textColor="#5DB075"
        android:layout_marginTop="90dp"
        android:textSize="40sp"
        android:gravity="center"
        android:text="@string/login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/username">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/inputUsername"
            android:backgroundTint="#ffffff"
            android:drawableRight="@drawable/ic_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="40dp"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:drawableRight="@drawable/ic_password"
            android:id="@+id/inputPassword"
            android:inputType="textPassword"
            android:backgroundTint="#ffffff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:backgroundTint="#5DB075"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginTop="40dp"
        android:id="@+id/loginText"
        android:layout_marginRight="100dp"
        android:layout_marginLeft="100dp"
        android:text="@string/signup_here"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>