<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/imageviewLaptop"
                android:layout_margin="2dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:id="@+id/textviewNameLaptop"
                    android:text="@string/name_product1"
                    android:textColor="#2196F3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:id="@+id/textviewPriceLaptop"
                    android:text="@string/price_product"
                    android:textColor="#BD597B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:id="@+id/textviewDescripLaptop"
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>