<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardBackgroundColor="#fff"
        app:cardCornerRadius="4dp">

        <LinearLayout
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageView
                android:adjustViewBounds="true"
                android:id="@+id/imageviewTablet"
                android:layout_margin="2dp"
                android:layout_width="100dp"
                android:layout_height="100dp"/>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:layout_margin="5dp"
                    android:id="@+id/textviewNameTablet"
                    android:text="@string/name_product1"
                    android:textColor="#2196F3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:id="@+id/textviewPriceTablet"
                    android:text="@string/price_product"
                    android:textColor="#BD597B"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:textSize="18sp"
                    android:layout_margin="5dp"
                    android:id="@+id/textviewDescripTablet"
                    android:text="@string/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>